Fixes spacing on columns

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -156,13 +156,13 @@ body.modal-open {
 
     .container,
     .container-fluid {
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .row {
-        margin-left: -0px;
-        margin-right: -0px;
+        margin-left: -5px;
+        margin-right: -5px;
     }
 
     .col-lg-1,
@@ -213,8 +213,8 @@ body.modal-open {
     .col-xs-7,
     .col-xs-8,
     .col-xs-9 {
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .table > thead > tr > th:first-child,
